# axiestudio

./: .env.docker  .env.example  .gitignore  ADMIN_TRIAL_PROTECTION_FIX.md  AXIESTUDIO_STRIPE_INTEGRATION_ANALYSIS.md  BACKEND_INTEGRATION.md  BULLETPROOF_SUBSCRIPTION_SYSTEM_COMPLETE.md  CODE_SIGNING_SETUP.md  COMPLETE_STRIPE_WEBHOOK_COVERAGE.md  COMPLEX_USER_BEHAVIOR_ANALYSIS.md  COMPONENT_TRANSLATION_STATUS.md  COMPREHENSIVE_FIXES_SUMMARY.md  COMPREHENSIVE_INTEGRATION_VALIDATOR.py  CONTRIBUTING.md  CRITICAL_EDGE_CASE_FIXES.md  Crash logs.txt  DEBUG THIS.txt  DEPLOYMENT.md  DEPLOYMENT_COMPONENT_VERIFICATION.py  DEPLOYMENT_CREDENTIALS_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_IMPORT_TEST.py  DEPLOYMENT_READY_EMAIL_FIX.py  DEPLOYMENT_STRUCTURE_VERIFICATION.py  DEPLOYMENT_SUMMARY.md  DOCKER_COMPARISON_WITH_LANGFLOW.md  DOCKER_EMAIL_FIX.py  DOCKER_HUB_DEPLOYMENT.md  DOCKER_MULTI_PLATFORM_GUIDE.md  Dockerfile  Dockerfile.no-cache  ENABLE_CODE_SIGNING_LATER.md  ENHANCED_TRIAL_PROTECTION_SYSTEM.md  EXHAUSTIVE_LANGFLOW_COMPARISON.py  FINAL_COMPREHENSIVE_VERIFICATION.py  FINAL_IMPLEMENTATION_VERIFICATION.md  FINAL_PWA_AUDIT_2024.md  FINAL_ROBUST_SYSTEM_TEST.py  FINAL_VALIDATION_CHECKLIST.md  FRONTEND_FIXES_SUMMARY.md  (+173 more)
.devcontainer/: README.md
.do/: app.yaml
.github/workflows/: auto-update.yml  ci.yml  clear-cache.yml  codeql.yml  deploy-docs-draft.yml  deploy_gh-pages.yml  docker-build.yml  docker-image.yml  docker-swedish-backend.yml  docker_test.yml  docs-update-openapi.yml  docs_test.yml  fetch_docs_notion.yml  jest_test.yml  js_autofix.yml  lint-js.yml  lint-py.yml  py_autofix.yml  python_test.yml  release.yml  release_nightly.yml  smoke-tests.yml  store_pytest_durations.yml  tauri-build.yml  template-tests.yml  translate.yml  typescript_test.yml
axi/: Makefile  README.md  pyproject.toml
axi/src/axi/: __main__.py  constants.py  settings.py  type_extraction.py
axiestudio/.github/workflows/: build-backend.yml  build-frontend.yml  build-full-system.yml  build-orchestrator.yml  docker-swedish-backend.yml
axiestudio/frontend/: index.html
axiestudio/frontend/assets/: SlackIcon-DsvfVk8s.js  Wikipedia-BfBUJ1Hc.js  index-0DBJ7QN1.js  (+119 more)
components/agents/: agent.py
components/data/: api_request.py  directory.py  file.py  url.py
components/helpers/: memory.py
components/icosacomputing/: combinatorial_reasoner.py
components/notdiamond/: notdiamond.py
components/olivya/: olivya.py
components/openai/: openai.py
components/perplexity/: perplexity.py
components/processing/: create_data.py  update_data.py
components/tools/: calculator.py  python_repl.py
components/vectorstores/: chroma.py  pinecone.py  qdrant.py
docker/: backend-only.Dockerfile  build_and_push.Dockerfile  cdk-docker-compose.yml  frontend-only.Dockerfile  fullstack.Dockerfile  swedish-backend.Dockerfile
properaxiestudio/: Dockerfile
scripts/: dev-tauri.bat  dev-tauri.sh  test-tauri-build.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: api.rs  main.rs
src/backend/: example_integration.py
src/frontend/: .gitignore  add-missing-hooks.js  aggressive-export-fix.js  analyze-all-issues.js  basic-swedish-translations.js  clean-imports.js  comprehensive-export-fix.js  comprehensive-search.js  comprehensive-string-extraction.js  comprehensive-translation-fix.js  create-screenshots.js  extract-translation-keys.js  extracted-strings.json  final-cleanup.js  final-comprehensive-fix.js  final-fix-all-remaining.js  final-fix-and-build.js  find-duplicate-exports.js  find-remaining-issues.js  fix-all-458-final.js  fix-all-458-issues.js  fix-all-duplicates.js  fix-all-exports.js  fix-all-issues.js  fix-all-malformed-functions.js  fix-all-modals.js  fix-all-remaining-exports.js  fix-all-remaining-issues.js  fix-all-syntax-errors.js  fix-and-build.js  fix-broken-exports.js  fix-constants.js  fix-double-braces.js  fix-duplicate-exports.js  fix-exports-smart.js  fix-hooks.js  fix-import-errors.js  fix-missing-imports.js  fix-remaining-13-files.js  fix-remaining-458-exports.js  (+20 more)
verification_system/: check_user_verification.py  email_verification.py  service.py
(+2138 files in other folders)
