[package]
name = "axiestudio"
version = "1.5.0"
description = "AxieStudio - Visual AI Flow Builder"
authors = ["AxieStudio Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "axiestudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "axiestudio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [
  "protocol-asset",
  "macos-private-api"
] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Enable devtools in development
devtools = ["tauri/devtools"]
